--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'io.fabric'
 
+//apply plugin: 'kotlin-kapt'
+
 repositories {
     maven { url 'https://maven.fabric.io/public' }
 
@@ -22,8 +24,8 @@ android {
         applicationId "com.sensoguard.hunter"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 7
-        versionName "1.07"
+        versionCode 10
+        versionName "1.10"
         vectorDrawables.useSupportLibrary = true
         //testInstrumentationRunner "android.support.openExtraCameraSettings.runner.AndroidJUnitRunner"
     }
@@ -67,7 +69,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+//    dataBinding {
+//        enabled = true
+//    }
+
 }
+
+
 
 configurations {
     all {
@@ -114,4 +123,22 @@ dependencies {
     implementation 'ru.egslava:MaskedEditText:1.0.5'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+
+    implementation 'com.squareup:android-times-square:1.6.5@aar'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
+
+    implementation 'com.github.halilozercan:BetterVideoPlayer:kotlin-SNAPSHOT'
+    //implementation 'com.borax12.materialdaterangepicker:library:1.9'
+    //implementation 'com.github.Kunzisoft:Android-SwitchDateTimePicker:2.0'
+    //implementation "com.github.wisnukurniawan:date-time-range-picker-android:1.0.0"
+    //implementation 'com.github.skedgo:DateTimeRangePicker:master-SNAPSHOT'
+    //implementation 'net.danlew:android.joda:2.10.3'
+    //implementation 'com.github.skedgo:DateTimeRangePicker:v1.3'
+    //kapt("groupId:artifactId:1.3.61")
+
 }
