--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
             android:label="@string/app_name"
             android:roundIcon="@drawable/ic_launcher"
             android:supportsRtl="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+
+            >
         <activity android:name=".activities.TestScanEmail">
 
             <!-- <intent-filter> -->
@@ -40,6 +42,7 @@
         </activity>
         <activity
                 android:name=".activities.InitAppActivity"
+                android:screenOrientation="portrait"
                 android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,11 +51,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.ActivationActivity" />
-        <activity android:name=".activities.MainActivity" />
+        <activity
+                android:name=".activities.ActivationActivity"
+                android:screenOrientation="portrait" />
+        <activity
+                android:name=".activities.MainActivity"
+                android:screenOrientation="portrait" />
         <activity
                 android:name=".activities.MyScreensActivity"
+                android:screenOrientation="portrait"
                 android:windowSoftInputMode="adjustPan" /> <!-- prevent hiding the field by softkey -->
+
+
         <uses-library
                 android:name="string"
                 android:required="false" />
