--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
         applicationId "com.sensoguard.hunter"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 12
-        versionName "1.12"
+        versionCode 13
+        versionName "1.13"
         vectorDrawables.useSupportLibrary = true
         //testInstrumentationRunner "android.support.openExtraCameraSettings.runner.AndroidJUnitRunner"
     }
@@ -85,8 +85,6 @@ configurations {
 }
 
 
-
-
 dependencies {
     //implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -94,8 +92,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
-//    androidTestImplementation 'com.android.support.openExtraCameraSettings:runner:1.0.2'
-//    androidTestImplementation 'com.android.support.openExtraCameraSettings.espresso:espresso-core:3.0.2'
+    //    androidTestImplementation 'com.android.support.openExtraCameraSettings:runner:1.0.2'
+    //    androidTestImplementation 'com.android.support.openExtraCameraSettings.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.things:androidthings:1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.github.kai-morich:usb-serial-for-android:1.7.0'
@@ -115,24 +113,17 @@ dependencies {
     //Support language
     implementation 'com.github.delight-im:Android-Languages:v1.0.1'
     implementation files('libs/javax.mail.jar')
-
     //test attached
     //implementation 'com.sun.mail:android-mail:1.5.6'
     implementation 'com.sun.mail:android-activation:1.5.6'
-
     implementation 'ru.egslava:MaskedEditText:1.0.5'
-
     implementation 'com.squareup.picasso:picasso:2.71828'
-
-
     implementation 'com.squareup:android-times-square:1.6.5@aar'
-
     //glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
-
-
     implementation 'com.github.halilozercan:BetterVideoPlayer:kotlin-SNAPSHOT'
+    //implementation 'org.apache.commons:commons-exec:1.3'
     //implementation 'com.borax12.materialdaterangepicker:library:1.9'
     //implementation 'com.github.Kunzisoft:Android-SwitchDateTimePicker:2.0'
     //implementation "com.github.wisnukurniawan:date-time-range-picker-android:1.0.0"
@@ -140,5 +131,5 @@ dependencies {
     //implementation 'net.danlew:android.joda:2.10.3'
     //implementation 'com.github.skedgo:DateTimeRangePicker:v1.3'
     //kapt("groupId:artifactId:1.3.61")
-
+    implementation files('libs/jsoup-1.12.1.jar')
 }
