--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,7 @@
                 android:name=".services.ServiceRepeat"
                 android:enabled="true"
                 android:exported="true" />
+        <service android:name=".services.ServiceEmailValidation1" />
         <service android:name=".services.ServiceEmailValidation" />
 
         <receiver android:name=".classes.BootCompleteReceiver">
