--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
                 android:screenOrientation="portrait" />
         <activity
                 android:name=".activities.MyScreensActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="adjustPan" /> <!-- prevent hiding the field by softkey -->
 
