--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
         applicationId "com.sensoguard.hunter"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 4
-        versionName "1.04"
+        versionCode 5
+        versionName "1.05"
         vectorDrawables.useSupportLibrary = true
         //testInstrumentationRunner "android.support.openExtraCameraSettings.runner.AndroidJUnitRunner"
     }
@@ -123,6 +123,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.github.halilozercan:BetterVideoPlayer:kotlin-SNAPSHOT'
+    //swipe
+    implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
 
     //implementation 'org.apache.commons:commons-exec:1.3'
     //implementation 'com.borax12.materialdaterangepicker:library:1.9'
