--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,11 @@ repositories {
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.sensoguard.hunter"
+        applicationId "com.sensoguard.trailmanager"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 5
-        versionName "1.05"
+        versionCode 6
+        versionName "1.06"
         vectorDrawables.useSupportLibrary = true
         //testInstrumentationRunner "android.support.openExtraCameraSettings.runner.AndroidJUnitRunner"
     }
