--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
         applicationId "com.sensoguard.trailmanager"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 11
-        versionName "1.11"
+        versionCode 14
+        versionName "1.14"
         vectorDrawables.useSupportLibrary = true
         //testInstrumentationRunner "android.support.openExtraCameraSettings.runner.AndroidJUnitRunner"
     }
@@ -37,10 +37,10 @@ android {
 
     signingConfigs {
         release {
-            storeFile file("sensorKeystore.jks")
-            storePassword "sensor1234"
-            keyAlias "sensoralias"
-            keyPassword "sensor1234"
+            storeFile file("sensoKeystore.jks")
+            storePassword "senso1234"
+            keyAlias "sensoalias"
+            keyPassword "senso1234"
         }
     }
 
