--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
         applicationId "com.sensoguard.trailmanager"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 17
-        versionName "1.17"
+        versionCode 21
+        versionName "1.21"
         vectorDrawables.useSupportLibrary = true
         //testInstrumentationRunner "android.support.openExtraCameraSettings.runner.AndroidJUnitRunner"
     }
@@ -103,9 +103,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'com.opencsv:opencsv:3.9'
     //implementation 'com.android.support:multidex:1.0.3'
-    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
-        transitive = true
-    }
+//    implementation('com.crashlytics.sdk.android:crashlytics:17.2.2@aar') {
+//        transitive = true
+//    }
     implementation 'com.github.felHR85:UsbSerial:6.0.6'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
