--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,15 +19,14 @@ repositories {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.sensoguard.trailmanager"
         minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 21
-        versionName "1.21"
+        targetSdkVersion 30
+        versionCode 24
+        versionName "1.24"
         vectorDrawables.useSupportLibrary = true
-        //testInstrumentationRunner "android.support.openExtraCameraSettings.runner.AndroidJUnitRunner"
     }
 
     //test attached
@@ -70,10 +69,6 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-//    dataBinding {
-//        enabled = true
-//    }
-
 }
 
 
@@ -88,28 +83,28 @@ configurations {
 dependencies {
     //implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     //    androidTestImplementation 'com.android.support.openExtraCameraSettings:runner:1.0.2'
     //    androidTestImplementation 'com.android.support.openExtraCameraSettings.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.things:androidthings:1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.github.kai-morich:usb-serial-for-android:1.7.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha02'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
     implementation 'com.opencsv:opencsv:3.9'
     //implementation 'com.android.support:multidex:1.0.3'
 //    implementation('com.crashlytics.sdk.android:crashlytics:17.2.2@aar') {
 //        transitive = true
 //    }
     implementation 'com.github.felHR85:UsbSerial:6.0.6'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //Support language
     implementation 'com.github.delight-im:Android-Languages:v1.0.1'
     implementation files('libs/javax.mail.jar')
