- Upgrade to the recent library

--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,32 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+
 buildscript {
-    ext.kotlin_version = '1.4.10'
+    ext.kotlin_version = '1.8.22'//'1.7.22'
     repositories {
         google()
-        jcenter()
-        maven { url 'https://maven.fabric.io/public' }
-        
+        mavenCentral()
+        //maven { url 'https://maven.fabric.io/public' }
+
     }
 
 
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.android.tools.build:gradle:8.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        classpath 'com.google.gms:google-services:4.4.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'io.fabric.tools:gradle:1.31.0'
+
+        //classpath 'io.fabric.tools:gradle:1.31.0'
+        classpath 'com.android.tools.build:gradle:8.1.1'
+
+        // Add the Crashlytics Gradle plugin (be sure to add version
+        // 2.0.0 or later if you built your app with Android Studio 4.1).
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
+
+
     }
 }
 
@@ -24,14 +35,14 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
 
 
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
 
