--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,37 +2,46 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
-apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-android-extensions'
 
-apply plugin: 'io.fabric'
+apply plugin: 'com.google.gms.google-services'
 
-//apply plugin: 'kotlin-kapt'
+
+// Apply the Crashlytics Gradle plugin
+apply plugin: 'com.google.firebase.crashlytics'
 
 repositories {
-    maven { url 'https://maven.fabric.io/public' }
 
     //test attached
-    jcenter()
+    mavenCentral()
     maven {
         url "https://maven.java.net/content/groups/public/"
     }
 }
 
 android {
-    compileSdkVersion 30
     defaultConfig {
         applicationId "com.sensoguard.trailmanager"
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 24
-        versionName "1.24"
+        compileSdk = 34
+        minSdkVersion 26
+        targetSdkVersion 34
+        versionCode 29
+        versionName "1.29"
         vectorDrawables.useSupportLibrary = true
     }
 
-    //test attached
-    packagingOptions {
-        pickFirst 'META-INF/LICENSE.txt' // picks the JavaMail license file
+    buildFeatures {
+        viewBinding = true
     }
+
+
+    packagingOptions {
+        resources {
+            pickFirsts += ['META-INF/LICENSE.txt']
+        }
+    }
+
+    //test attached
 
     signingConfigs {
         release {
@@ -47,7 +56,7 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
-            //ext.enableCrashlytics = true
+            ext.enableCrashlytics = true
             minifyEnabled true
             //buildConfigField "Boolean", "REPORT_CRASH", 'true'
             //minifyEnabled false
@@ -55,7 +64,7 @@ android {
         }
         debug {
             ext.alwaysUpdateBuildId = false
-//            //ext.enableCrashlytics = false
+            ext.enableCrashlytics = false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             //buildConfigField "Boolean", "REPORT_CRASH", 'false'
@@ -64,71 +73,74 @@ android {
         }
     }
 
+    kotlinOptions { jvmTarget = "1.8" }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.sensoguard.trailmanager'
 
 }
 
 
 
 configurations {
-    all {
+    configureEach {
         exclude module: 'commons-logging'
     }
 }
 
 
 dependencies {
-    //implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
-    //    androidTestImplementation 'com.android.support.openExtraCameraSettings:runner:1.0.2'
-    //    androidTestImplementation 'com.android.support.openExtraCameraSettings.espresso:espresso-core:3.0.2'
+    testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.android.things:androidthings:1.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.github.kai-morich:usb-serial-for-android:1.7.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.google.android.gms:play-services-location:17.1.0'
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.android.material:material:1.11.0-alpha02'
     implementation 'com.opencsv:opencsv:3.9'
-    //implementation 'com.android.support:multidex:1.0.3'
-//    implementation('com.crashlytics.sdk.android:crashlytics:17.2.2@aar') {
-//        transitive = true
-//    }
     implementation 'com.github.felHR85:UsbSerial:6.0.6'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //Support language
     implementation 'com.github.delight-im:Android-Languages:v1.0.1'
     implementation files('libs/javax.mail.jar')
     //test attached
-    //implementation 'com.sun.mail:android-mail:1.5.6'
-    implementation 'com.sun.mail:android-activation:1.5.6'
-    implementation 'ru.egslava:MaskedEditText:1.0.5'
+    implementation 'com.sun.mail:android-activation:1.6.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup:android-times-square:1.6.5@aar'
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
-    implementation 'com.github.halilozercan:BetterVideoPlayer:kotlin-SNAPSHOT'
     //swipe
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
 
-    //implementation 'org.apache.commons:commons-exec:1.3'
-    //implementation 'com.borax12.materialdaterangepicker:library:1.9'
-    //implementation 'com.github.Kunzisoft:Android-SwitchDateTimePicker:2.0'
-    //implementation "com.github.wisnukurniawan:date-time-range-picker-android:1.0.0"
-    //implementation 'com.github.skedgo:DateTimeRangePicker:master-SNAPSHOT'
-    //implementation 'net.danlew:android.joda:2.10.3'
-    //implementation 'com.github.skedgo:DateTimeRangePicker:v1.3'
-    //kapt("groupId:artifactId:1.3.61")
     implementation files('libs/jsoup-1.12.1.jar')
     implementation "androidx.cardview:cardview:1.0.0"
+
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+
+    // Declare the dependencies for the Crashlytics and Analytics libraries
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.2"
+    implementation "androidx.activity:activity-ktx:1.7.2"
+    implementation "androidx.fragment:fragment-ktx:1.6.1"
+
 }
