--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         compileSdk = 34
         minSdkVersion 26
         targetSdkVersion 34
-        versionCode 31
-        versionName "1.31"
+        versionCode 32
+        versionName "1.32"
         vectorDrawables.useSupportLibrary = true
     }
 
@@ -57,7 +57,7 @@ android {
         release {
             signingConfig signingConfigs.release
             ext.enableCrashlytics = true
-            minifyEnabled true
+            //minifyEnabled true
             //buildConfigField "Boolean", "REPORT_CRASH", 'true'
             //minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
