--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
     <uses-permission
             android:name="android.permission.WRITE_INTERNAL_STORAGE"
             tools:ignore="SystemPermissionTypo" />
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
 
     <application
             android:name="com.sensoguard.trailmanager.LSPatrolApp"
